Massive performance improvements, primarily in network building